# asl-parrot

./: .clocignore  .gitmodules  CMakeLists.txt  README.md
debian/: asl-parrot.service  changelog  control  copyright  postinst
docs/: parrot-deploy.md
etc/: asl-parrot.env  asl-parrot.service  lab-1.ini
media/: greeting-8k.pcm  playback-8k.pcm
media/16k/: 0db.pcm  average.pcm  codec-is-16k-linear.pcm  codec-is-8k-ulaw.pcm  less-than-minus-40db.pcm  minus-10db.pcm  minus-11db.pcm  minus-12db.pcm  minus-13db.pcm  minus-14db.pcm  minus-15db.pcm  minus-16db.pcm  minus-17db.pcm  minus-18db.pcm  minus-19db.pcm  minus-1db.pcm  minus-20db.pcm  minus-21db.pcm  minus-22db.pcm  minus-23db.pcm  minus-24db.pcm  minus-25db.pcm  minus-26db.pcm  minus-27db.pcm  minus-28db.pcm  minus-29db.pcm  minus-2db.pcm  minus-30db.pcm  minus-31db.pcm  minus-32db.pcm  minus-33db.pcm  minus-34db.pcm  minus-35db.pcm  minus-36db.pcm  minus-37db.pcm  minus-38db.pcm  minus-39db.pcm  minus-3db.pcm  minus-40db.pcm  minus-4db.pcm  (+11 more)
scripts/: install-parrot.sh  make-source-tar-parrot.sh
src/: main-parrot.cpp  service-thread.cpp  service-thread.h
src/demos/: test-voice.cpp
